2011-11-23  Sergio Martin <sergio.martin@artica.es>

	* include/functions_config.php
	include/config_process.php
	index.php
	operation/side_menu.php: Fixed menu visibility when
	login and configure MINIMAL mode in the people section
	to see only auditory

2011-11-22  Sergio Martin <sergio.martin@artica.es>

	* integria_dbdata.sql
	godmode/setup/setup_auth.php: Fixed default auth mode in
	setup editor and in default data sql script

2011-11-22  Sergio Martin <sergio.martin@artica.es>

	* operation/side_menu.php: Add MINIMAL mode to side menu
	visibility with the same (for moment) of LIMITED

2011-11-22  Sergio Martin <sergio.martin@artica.es>

	* include/config_process.php
	include/functions.php: Added MINIMAL mode to menu visibility

2011-11-22  Sancho Lerena <slerena@artica.es>

	* Updated language (Spanish)

2011-11-14  Sergio Martin <sergio.martin@artica.es>

	* include/js/integria_incident_search.js
	operation/incidents/incident_tracking.php: Improved the incidents 
	refresh conditions loading workunits tab when add a workunit, 
	the files tab when add a file and the tracking tab when add a 
	workunit or a file for bug 3429219
	Changing the order of tracking to DESC too.

2011-11-11  Sergio Martin <sergio.martin@artica.es>

	* integria_db.sql
	upgrade_to_3.0.sql: Fixed constraint bug in tapp_activity_data
	table and missed tmenu_visibility table in migration sql script

2011-11-11  Vanessa Gil <vgil@artica.es>

	* operation/projects/people_manager.php: fixed errors when
	adding users.

2011-11-10  Sergio Martin <sergio.martin@artica.es>

	* general/license/integria_info_en.html
	general/license/frits_info_es_es.html
	general/license/frits_info_en.html
	general/license/integria_info_es.html
	general/footer.php: Fixed footer link to gpl information
	for all languages

2011-11-10  Sergio Martin <sergio.martin@artica.es>

	* include/styles/integria.css
	images/footerbg.gif: Fixed footer layout

2011-11-10  Sergio Martin <sergio.martin@artica.es>
